--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Uncle's Blog
 SEOTitle: Uncle's Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/post-bg-desk.png
 email: uncledrewzhu@163.com
 description: "work hard, play hard."
 keyword: "uncle, drew, 德鲁大叔, spring, spring boot"
