--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ RSS: false
 zhihu_username:     uncledrewzhu
 github_username:    uncledrewzhu
 #facebook_username:  baiying.qiu.7
-#jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
+jianshu_username:   3e52aece8b7f
+twitter_username:   uncledrewzhu
 
 
 
