--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Uncle's Blog
 SEOTitle: Uncle's Blog
-header-img: img/post-bg-cook.jpg
+header-img: img/home.jpg
 email: uncledrewzhu@163.com
 description: "work hard, play hard."
 keyword: "uncle, drew, 德鲁大叔, spring, spring boot"
@@ -12,7 +12,7 @@ github_repo: "https://github.com/UncleDrewZhu/UncleDrewZhu.github.io.git" # you 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "work hard, play hard!"
-sidebar-avatar: /img/my-image.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/head-image.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
