--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@ header-img: img/home.jpg
 email: uncledrewzhu@163.com
 description: "work hard, play hard."
 keyword: "uncle, drew, 德鲁大叔, spring, spring boot"
-url: "https://uncledrewzhu.github.io/"          # your host, for absolute URL
+url: "http://uncledrewzhu.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/UncleDrewZhu/UncleDrewZhu.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "work hard, play hard!"
-sidebar-avatar: /img/head-image.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/head-image.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
