--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: UncleDrew's Blog
-SEOTitle: UncleDrew's Blog
+SEOTitle: Blog
 header-img: img/home.jpg
 email: uncledrewzhu@163.com
 description: "work hard, play hard."
